# elschool-api

./: .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql
src/: hello_test.cpp  main.cpp
src/handlers/marks/: marks_base.cpp  marks_base.hpp
src/handlers/marks/average_marks/: average_marks.cpp  average_marks.hpp
src/handlers/marks/today_marks/: today_marks.cpp  today_marks.hpp
src/handlers/marks_handlers/: marks_base.cpp  marks_base.hpp
src/handlers/marks_handlers/average_marks_handler/: average_marks_handler.cpp  average_marks_handler.hpp
src/handlers/marks_handlers/today_marks_handler/: today_marks_handler.cpp  today_marks_handler.hpp
src/handlers/token_handler/: token_handler.cpp  token_handler.hpp
src/handlers/users_handler/: users_handler.cpp  users_handler.hpp
src/parser/: parser.cpp  parser.hpp
src/parser_tests/: mocked_time_provider.cpp  mocked_time_provider.hpp  parser_tests.cpp  test.html  test_constants.h
src/token_manager/: token_cache.cpp  token_cache.hpp  token_manager.cpp  token_manager.hpp
src/user_manager/: user_manager.cpp  user_manager.hpp
src/utils/: constants_storage.h  exceptions.h
tests/: conftest.py  test_basic.py  test_constants.h
utests/parser_tests/: mocked_time_provider.hpp  parser_tests.cpp
utests/token_cache_tests/: token_cache_tests.cpp
